--- a/robots/h1_2/config.yaml
+++ b/robots/h1_2/config.yaml
@@ -1,6 +1,6 @@
 asset_path: /home/nyuair/unitree_rl_gym/resources/robots/h1_2/h1_2_simplified.urdf
-usd_dir: /home/nyuair/niraj_projects/niraj_github/IsaacLab_Locomotion_H1-2/robots/h1_2_no_hand
-usd_file_name: h1_2_no_hand.usd
+usd_dir: /home/nyuair/niraj_projects/niraj_github/IsaacLab_Locomotion_H1-2/robots/h1_2
+usd_file_name: h1_2.usd
 force_usd_conversion: true
 make_instanceable: true
 fix_base: false
